@@ -69,7 +69,9 @@ module NestedForm
     end
 
     def fields_for_nested_model(name, object, options, block)
-      @template.content_tag(:div, super, :class => 'fields')
+      classes = 'fields'
+      classes << ' marked_for_destruction' if object.marked_for_destruction?
+      @template.content_tag(:div, super, :class => classes)
     end
 
     private
